--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+
     <div class="container">
         <div class="block">
             <img class="none" id="image" src="images/pikachu.webp">
@@ -27,8 +27,11 @@
                 <i class='bx bx-border-bottom' onclick="borBot()"></i>
                 <i class='bx bx-border-left' onclick="borLef()"></i>
                 <i class='bx bx-border-outer' onclick="allBor()"></i>
-                <i class='bx bx-border-radius' onclick="rad()"></i>
             </div>
+            <label>
+                <p>Select a color: </p>
+                <input type="color" id="color">
+            </label>
         </div>
     </div>
 
